--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="mask-icon" href="/mask-icon.svg" color="#3b82f6" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="description" content="Ứng dụng quản lý chi tiêu cá nhân và gia đình" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover" />
+    <meta name="description" content="Ứng dụng quản lý chi tiêu cá nhân và gia đình - PWA có thể cài đặt trên điện thoại" />
     <meta name="theme-color" content="#3b82f6" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Expense Management" />
-    <meta name="application-name" content="Expense Management" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Chi Tiêu" />
+    <meta name="application-name" content="Quản Lý Chi Tiêu" />
     <meta name="msapplication-TileColor" content="#3b82f6" />
-    <meta name="msapplication-config" content="/browserconfig.xml" />
+    <meta name="msapplication-TileImage" content="/pwa-192x192.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <title>Expense Management</title>
   </head>
   <body>
